fix(styles): Add `overflow-wrap` to page headers

--- a/guide/.vuepress/styles/content.scss
+++ b/guide/.vuepress/styles/content.scss
@@ -22,6 +22,7 @@
 	& > h5,
 	& > h6 {
 		color: var(--c-headers);
+		overflow-wrap: anywhere;
 	}
 
 	code {
